crates/toml_edit/tests/fixtures/invalid/float-leading-zero-neg.stderr
TOML parse error at line 1, column 18
  |
1 | leading-zero = -03.14
  |                  ^
Unexpected `3`
Expected `#`
